--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <section id="autores" class="card" style="margin-top:12px">
           <h2>7 — Autores</h2>
           <p class="lead"><strong>Equipo:</strong> Sebastián Morales, Cielo Ramírez y Luis Sebastián.</p>
-          <p class="lead">Institución: Colegio / Grupo 11-02. Año: 2025.</p>
+          <p class="lead">Institución: Colegio El encanto / Grupo 11-02. Año: 2025.</p>
         </section>
 
 
@@ -228,4 +228,5 @@
   </script>
 </body>
 </html>
+
 
