--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
   border: 3px solid #ffd166; /* borde un poquito más grueso */
   box-shadow: 0 0 12px rgba(0,0,0,0.6);
 }
+p, li, .lead {
+  text-align: justify;
+}
 
   </style>
 </head>
@@ -228,5 +231,6 @@
   </script>
 </body>
 </html>
+
 
 
