--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   border: 3px solid #ffd166; /* borde un poquito más grueso */
   box-shadow: 0 0 12px rgba(0,0,0,0.6);
 }
+/* Justificar todo el texto de la página */
 p, li, .lead {
   text-align: justify;
 }
@@ -231,6 +232,7 @@ p, li, .lead {
   </script>
 </body>
 </html>
+
 
 
 
