--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
   border: 3px solid #ffd166; /* borde un poquito más grueso */
   box-shadow: 0 0 12px rgba(0,0,0,0.6);
 }
-/* Justificar todo el texto de la página */
+/* Justificar todo el texto */
 p, li, .lead {
-  text-align: justify;
+  text-align: justify !important;
 }
 
   </style>
@@ -232,6 +232,7 @@ p, li, .lead {
   </script>
 </body>
 </html>
+
 
 
 
