--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ p, li, .lead {
           </ul>
         </div>
         <!-- fotos debajo del índice -->
-  <div class="card" style="margin-top:15px; text-align:center;">
+  <div class="card" style="margin-top:15px; text-align:justify;">
     <h3 style="color:#ffd166;">Imágenes del Mercado</h3>
     <div class="fotos-vertical">
       <img src="img/WhatsApp Image 2025-10-25 at 3.05.32 PM.jpeg" alt="Foto del mercado">
@@ -232,6 +232,8 @@ p, li, .lead {
   </script>
 </body>
 </html>
+
+
 
 
 
