--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <meta name="description" content="Proyecto sobre el impacto del comercio informal en Lorica, Córdoba.">
   <style>
     :root{
---bg: #1a0f0f;
---card: #2b1818;
---accent: #d4af37; /* dorado clásico */
---muted: #e3c9a8;
+-bg:#071220; --card:#0b1624; --accent:#ffd166; --muted:#9fb0c8;
+      --glass:rgba(255,255,255,0.03); --radius:14px; --maxw:1100px;
     }
     *{box-sizing:border-box}
     body{
@@ -234,6 +232,7 @@ p, li, .lead {
   </script>
 </body>
 </html>
+
 
 
 
