--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Proyecto sobre el impacto del comercio informal en Lorica, Córdoba.">
   <style>
     :root{
--bg:#071220; --card:#0b1624; --accent:#ffd166; --muted:#9fb0c8;
+      --bg:#071220; --card:#0b1624; --accent:#ffd166; --muted:#9fb0c8;
       --glass:rgba(255,255,255,0.03); --radius:14px; --maxw:1100px;
     }
     *{box-sizing:border-box}
@@ -232,8 +232,6 @@ p, li, .lead {
   </script>
 </body>
 </html>
-
-
 
 
 
