--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   <title>Impacto del Comercio Informal — Mercado de Lorica</title>
   <meta name="description" content="Proyecto sobre el impacto del comercio informal en Lorica, Córdoba.">
   <style>
-    :root{
-      --bg:#071220; --card:#0b1624; --accent:#ffd166; --muted:#9fb0c8;
-      --glass:rgba(255,255,255,0.03); --radius:14px; --maxw:1100px;
+   :root{
+      --bg:#0f1724;
+      --card:#0b1220;
+      --accent:#ffd166;
+      --muted:#94a3b8;
+      --glass: rgba(255,255,255,0.03);
+      --radius:14px;
+      --maxw:1100px;
     }
     *{box-sizing:border-box}
     body{
@@ -104,19 +109,19 @@ p, li, .lead {
     <main>
       <div>
         <section id="nombre" class="card" style="margin-bottom:12px">
-          <h2>1 — Nombre del proyecto</h2>
+          <h2>Nombre del proyecto</h2>
           <p class="lead">Impacto del comercio informal en la competitividad y distribución del espacio público en el mercado de Lorica, Córdoba.</p>
         </section>
 
         <section id="resumen" class="card">
-          <h2>2 — Resumen</h2>
+          <h2> Resumen</h2>
           <p class="lead">
             El presente estudio tuvo como propósito analizar el impacto que generan las ventas informales en la competitividad y en la distribución del espacio público en el mercado de Lorica, Córdoba. A través de entrevistas realizadas a vendedores formales, informales y clientes, se recopiló información relevante sobre la situación económica y social de las personas que trabajan o frecuentan el mercado. Los resultados evidencian que las ventas informales influyen significativamente en la movilidad y en la dinámica comercial del lugar, generando tanto ventajas económicas como conflictos en el uso del espacio público. identificaron motivaciones, conflictos y propuestas de intervención que incluyen zonas designadas para la venta, procesos progresivos de formalización y capacitación para mejorar la convivencia urbana.
           </p>
         </section>
 
         <section id="planteamiento" class="card" style="margin-top:12px">
-          <h2>3 — Planteamiento del problema</h2>
+          <h2>Planteamiento del problema</h2>
           <p class="lead">
             En el mercado de Lorica, Córdoba, el comercio informal se ha convertido en una práctica común que afecta la movilidad, la organización y la competitividad del espacio público. Los vendedores informales ocupan zonas destinadas al tránsito peatonal y vehicular, lo que genera congestión, desorden y competencia desigual con los comerciantes formales. Este problema refleja la falta de regulación y de oportunidades laborales, lo que obliga a muchas personas a recurrir a la venta informal como medio de subsistencia
           </p>
@@ -131,7 +136,7 @@ p, li, .lead {
         </section>
 
         <section id="metodologia" class="card" style="margin-top:12px">
-          <h2>4 — Metodología</h2>
+          <h2> Metodología</h2>
           <div class="grid-2">
             <div>
               <h3 style="margin:0 0 8px 0">Enfoque</h3>
@@ -163,7 +168,7 @@ p, li, .lead {
         </section>
 
         <section id="conclusiones" class="card" style="margin-top:12px">
-          <h2>5 — Conclusiones</h2>
+          <h2>Conclusiones</h2>
           <ol class="lead">
             <li>El comercio informal afecta la movilidad y la distribución del espacio público en el mercado.</li>
             <li>Existe una tensión entre la supervivencia económica de vendedores informales y la formalidad exigida a comerciantes establecidos.</li>
@@ -173,7 +178,7 @@ p, li, .lead {
         </section>
 
         <section id="galeria" class="card" style="margin-top:12px">
-          <h2>6 — Galería de imágenes</h2>
+          <h2>Galería de imágenes</h2>
           <p class="lead">Imágenes del mercado y observaciones de campo.</p>
           <div class="gallery" style="margin-top:10px">
   <div class="thumb"><img src="img/foto1.jpg.jpeg"></div>
@@ -186,7 +191,7 @@ p, li, .lead {
         </section>
 
         <section id="autores" class="card" style="margin-top:12px">
-          <h2>7 — Autores</h2>
+          <h2> Autores</h2>
           <p class="lead"><strong>Equipo:</strong> Sebastián Morales, Cielo Ramírez y Luis Sebastián.</p>
           <p class="lead">Institución: Colegio El encanto / Grupo 11-02. Año: 2025.</p>
         </section>
